# libSBGN2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  VERSION.txt
examples/: CMakeLists.txt
examples/c++/: CMakeLists.txt  adh.cpp  binary-no-outcome.cpp  create_cpp_example.cpp  create_render_extension.cpp  echo_sbgn.cpp  print_render_extension.cpp  print_sbgn.cpp  write_af_AF_Reference_Card.cpp  write_af_activity-nodes.cpp  write_af_auxiliary-units.cpp  write_af_compartment.cpp  write_af_delay.cpp  write_af_modulation.cpp  write_af_submap.cpp  write_af_submap_expanded.cpp  write_af_submaps_all-in-one.cpp  write_af_two_edges_between_two_activities.cpp  write_er_ER_Reference_Card.cpp  write_er_binary-no-outcome.cpp  write_er_binary-with-perturbation-and-phenotype.cpp  write_er_cis.cpp  write_er_delay.cpp  write_er_existence_variable.cpp  write_er_implicit_xor.cpp  write_er_location.cpp  write_er_outcome-dual.cpp  write_er_outcome-simplified.cpp  write_er_phosphorylation.cpp  write_er_ternary-interaction.cpp  write_er_ternary-with-cardinality.cpp  write_er_ternary-with-perturbation-and-phenotype.cpp  write_er_trans.cpp  write_example1.cpp  write_pd_PD_Reference_Card.cpp  write_pd_activated_stat1alpha_induction_of_the_irf1_gene.cpp  write_pd_adh.cpp  write_pd_and.cpp  write_pd_annotation.cpp  write_pd_bool-expr-pd.cpp  (+23 more)
examples/csharp/: CMakeLists.txt  create_render_extension.cs  print_render_extension.cs
examples/java/: CMakeLists.txt  create_render_extension.java  print_render_extension.java
examples/python/: create_render_extension.py  print_render_extension.py
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt
src/bindings/csharp/: AssemblyInfo.cs.in  CMakeLists.txt  compile-native-files.cmake  libsbgn.i  local.cpp  local.i
src/bindings/java/: CMakeLists.txt  Manifest.txt.in  compile-native-files.cmake  local.cpp  local.i
src/bindings/python/: CMakeLists.txt  add_version.cmake  libsbgn.i  local-contrib.i  local.cpp  local.i
src/bindings/swig/: ASTNodes.i  ListWrapper.h  OStream.cpp  OStream.h  layout-package.h  layout-package.i  libsbgn.h  libsbgn.i  render-package.h  render-package.i  std_set.i
src/sbgn/: CMakeLists.txt  SbgnArc.cpp  SbgnArc.h  SbgnArcGroup.cpp  SbgnArcGroup.h  SbgnBBox.cpp  SbgnBBox.h  SbgnBase.cpp  SbgnBase.h  SbgnCallout.cpp  SbgnCallout.h  SbgnConstructorException.cpp  SbgnConstructorException.h  SbgnDocument.cpp  SbgnDocument.h  SbgnEntity.cpp  SbgnEntity.h  SbgnError.cpp  SbgnError.h  SbgnErrorLog.cpp  SbgnErrorLog.h  SbgnErrorTable.h  SbgnGlyph.cpp  SbgnGlyph.h  SbgnLabel.cpp  SbgnLabel.h  SbgnListOf.cpp  SbgnListOf.h  SbgnListOfArcGroups.cpp  SbgnListOfArcGroups.h  SbgnListOfArcs.cpp  SbgnListOfArcs.h  SbgnListOfGlyphs.cpp  SbgnListOfGlyphs.h  SbgnListOfMaps.cpp  SbgnListOfMaps.h  SbgnListOfPoints.cpp  SbgnListOfPoints.h  SbgnListOfPorts.cpp  SbgnListOfPorts.h  (+19 more)
src/sbgn/common/: SbgnEnumerations.cpp  SbgnEnumerations.h  SbgnOperationReturnValues.cpp  SbgnOperationReturnValues.h  common.h  extern.h  libsbgn-config-common.h.cmake  libsbgn-config.h  libsbgn-namespace.h.cmake  libsbgn-version.cpp  libsbgn-version.h.cmake  sbgnfwd.h
